--- a/src/http.html
+++ b/src/http.html
@@ -5,28 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-<login-panel></login-panel>
+<div ng-controller="hellctrl">{{user}}</div>
 <script src="../node_modules/angular/angular.js"></script>
 <script>
     //一切从模块开始，其他所有的组件都挂在模块下面
     angular.module('helloAngular',[])//两个参数的时候表示定义一个模块，一个参数的时候获取模块，第二个参数表示模块的依赖项
     //当定义一个控制器之后，就会产生一个$scope对象(视图模型viewmodel)，作用增强$scope
-    angular.module('helloAngular').controller('hellctrl',function ($scope) {
-        //user看作model，跟数据有关
-        var user ={
-            name : 'tyg'
-        }
-        //看作视图模型
-        $scope.name = user.name;
-
+    angular.module('helloAngular').controller('hellctrl',function ($scope,$http) {
+        $http.get('user.json').then(function (data) {
+            $scope.user = data.data.username;
+        })
     })
-    //组件式指令
-    angular.module('helloAngular').directive('loginPanel',function () {
-        return {
-            //模版 实现DOM元素的转换
-            template:'用户名：<input type="text" name="username"/><button>登录</button>'
-        }
-    });
+
 
 </script>
 </body>
